@@ -1,3 +1,8 @@
+2017-08-14  Bin Cheng  <bin.cheng@arm.com>
+
+	PR tree-optimization/81799
+	* gcc.dg/tree-ssa/pr81799.c: New.
+
 2017-08-14  Wilco Dijkstra  <wdijkstr@arm.com>
 
 	PR middle-end/46932
